# hubverse-transform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deploy_lambda.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: run-code-checks.yaml
faas/: lambda_function.py  lambda_retrigger_model_output_add.py
requirements/: requirements-dev.txt  requirements.txt
src/hubverse_transform/: hub_config.py  model_output.py
test/: conftest.py  test_model_output.py
test/integration/: test_model_output_integration.py
test/integration/data/: 2024-05-04-teamabc-locations_numeric.csv  2024-05-04-teamabc-locations_numeric.parquet  2024-07-07-teamabc-output_type_ids_mixed.csv  2024-07-07-teamabc-output_type_ids_numeric.csv
test/integration/data/flu-metrocast/hub-config/: admin.json  model-metadata-schema.json  tasks.json
test/unit/: test_hub_config.py  test_model_output.py
test/unit/data/: 2024-07-07-teamabc-output_type_ids_numeric.csv  2024-07-07-teamabc-output_type_ids_numeric.parquet  2024-07-07-teamabc-output_type_ids_numeric_no_location.csv  2024-07-07-teamabc-output_type_ids_numeric_no_location.parquet
