[project]
name = "hubverse-transform"
description = "Utilities for Hubverse model-output transformations"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]

dependencies = [
    "pyarrow>=16.0.0",
    "cloudpathlib[s3]",
]
authors = [
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]

[project.optional-dependencies]
dev = [
    'mypy',
    'pytest',
    'pytest-mock',
    'ruff',
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
lint.extend-select = ['I']

[tools.setuptools]
packages = ['hubverse_transform']